# gemini-desktop

./: .gitignore  LICENSE  README.md  implementation.md  package-lock.json  package.json
docs/: documentation.md
landing_page/: README.md  index.html  serve.py
screenshots/: README_screenshots.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
