[package]
name = "gemini-desktop"
version = "1.0.0"
description = "Desktop app for Google Gemini"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "window-unminimize", "window-unmaximize", "window-hide", "window-set-position", "shell-open", "window-show", "window-close", "window-minimize", "window-set-size", "window-maximize", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
